--- a/src/app/modules/category/components/category/category.component.html
+++ b/src/app/modules/category/components/category/category.component.html
@@ -14,7 +14,7 @@
         <div class="right">
             <ul>
                 <li>
-                    <button mat-raised-button color="primary">Agregar Categoria</button>
+                    <button mat-raised-button color="primary" (click)="openCategoryDialog()">Agregar Categoria</button>
                 </li>
             </ul>
 
