integracion con Keycloack

--- a/src/app/modules/shared/components/sidenav/sidenav.component.html
+++ b/src/app/modules/shared/components/sidenav/sidenav.component.html
@@ -36,7 +36,7 @@
                 <div class="profile-card">
                     <div class="header">
                         <h2>Henry Guaman</h2>
-                        <h4>henry96guaman@gmail.com</h4>
+                        <h4>henry96guamangmail.com</h4>
                     </div>
                 </div>
 
