--- a/src/app/modules/category/components/category/category.component.css
+++ b/src/app/modules/category/components/category/category.component.css
@@ -11,8 +11,12 @@ table {
     margin-left: auto;
 }
 
+ul{
+    display: flex;
+}
 ul li {
     list-style: none;
+    margin-right: 10px;
 }
 
 mat-form-field{
