--- a/src/app/modules/product/product/product.component.css
+++ b/src/app/modules/product/product/product.component.css
@@ -11,8 +11,13 @@ table {
     margin-left: auto;
 }
 
+ul{
+    display: flex;
+}
+
 ul li {
     list-style: none;
+    margin-right: 10px;
 }
 
 mat-form-field{
