--- a/src/app/modules/product/product/product.component.html
+++ b/src/app/modules/product/product/product.component.html
@@ -19,6 +19,9 @@
                 <li>
                     <button mat-raised-button color="primary" (click)="openProductDialog()">Agregar Producto</button>
                 </li>
+                <li>
+                    <button mat-raised-button color="primary" (click)="exportExcel()">Exportar a Excel</button>
+                </li>
             </ul>
         </div>
 
